# shrink

./: .gitignore  CMakeLists.txt  README.md  Shrink.cxx  Shrink.h  TestShrink.cxx
